# EnzyExtract

./: .gitignore  BRENDA_weirdos.txt  README.md  compare_brenda.py  compare_runeem.py  compare_two.py  compare_unordered_runeem.py  dashboard.py  disambiguate.py  generate_bmatched.py  generate_brenda.py  generate_valid.py  get_uniprot_accessions.py  print_brenda_subsets_polars.py  print_compile.py  print_enzy.py  print_readmd.py  print_usage.py  pyproject.toml  read_explode.py  read_gpt_close_seq.py  run_anything.py  run_backform.py  run_enzyme_needle.py  run_explode.py  run_fasta.py  run_fragmentary.py  run_generate_brenda.py  run_gpt_close_seq.py  run_mutant_distances.py  run_read_pdfs_for_idents.py  run_sequence.py  run_substrates.py  run_tableboth.py  run_uniprot_accessions.py  run_xmls.py  useless papers.md
data/: .gitignore
dev/: inspect_ab_pmids.py  inspect_blame_ingestion.py  play_xmls.py  roundup_pmids.py
synonyms/: construct_synonyms.ipynb  prompt_collections_synonyms.py
table_eval/: evaluate_table_formats.py  format_playground.ipynb  pymupdf_format.txt  pymupdf_read.py  which_format_is_best.ipynb
working/: backform_eval.py  count_perfects.py  preview_problems.py  print_enzy.py  print_enzy_eval.py  print_enzy_improve.py  print_enzyme_sequences.py  revalidate_df.py  sift_human_perfect.py  working_backform.py  working_backform_oneshot.py  working_backform_outdated.py  working_enzy_explode.py  working_enzy_hungarian.py  working_enzy_hungarian_to_improve.py  working_enzy_improve.py  working_enzy_remdify.py  working_enzy_table_md.py  working_enzy_tableboth.py  (+2 more)
(+267 files in other folders)
