[project]
name = "enzyextract"
version = "0.0.1"
description = "EnzyExtract successor"
authors = [
  {name = "conjuncts"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "pandas",
  "polars",
  "litellm",
  "biopython",
  "seaborn",
  "google-cloud-storage",
  "anthropic",
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

